--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -116,6 +116,8 @@
 
         @include for-tablet {
             margin: 10px 0;
+            font-size: 12px;
+            line-height: 1.33;
         }
 
         &:last-child {
