--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -116,7 +116,7 @@
 }
 
 .form {
-    font-size: 1px;
+    font-size: 12px;
     line-height: 1.5;
 
     /* margin: 40px; */
@@ -152,6 +152,10 @@
         margin: 0;
         z-index: 2;
         background-color: transparent;
+
+        &::placeholder {
+            color: $placeholder-color;
+        }
 
         &:hover,
         &:focus {
