--- a/scss/components/_work.scss
+++ b/scss/components/_work.scss
@@ -20,10 +20,12 @@
     line-height: 1.2;
     color: $title-text-color;
     list-style: none;
+    text-align: center;
 
 
     @include for-tablet-and-desktop {
         flex-direction: row;
+        text-align: left;
 
     }
 
