--- a/scss/utilite/_colors.scss
+++ b/scss/utilite/_colors.scss
@@ -4,3 +4,5 @@ $hover-color: rgb(33, 150, 243);
 $body-color: rgb(255, 255, 255);
 $button-background: rgba(245, 244, 250, 1);
 $icon-color: rgba(175, 177, 184, 1);
+$placeholder-color: rgba(117, 117, 117, 0.5);
+$gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
