--- a/scss/utilite/_sizes.scss
+++ b/scss/utilite/_sizes.scss
@@ -6,6 +6,12 @@ $tablet: 768px;
 $desktop: 1200px;
 
 
+@mixin for-small-mobile {
+    @media only screen and (max-width: 400px) {
+        @content;
+    }
+}
+
 @mixin for-mobile {
     @media only screen and (max-width: 767px) {
         @content;
